--- a/AttendanceReport.html
+++ b/AttendanceReport.html
@@ -5,9 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Attendance Report</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="StyleSheet/Dashboard.css"> 
     <link rel="stylesheet" href="StyleSheet/AttendanceReport.css">
     <link rel="stylesheet" href="StyleSheet/SideBar.css">
+     <style>
+        /* Toast Notification - Upper Right */
+        #toast-container { position: fixed; top: 20px; right: 20px; z-index: 10000; }
+        .toast { 
+            padding: 12px 20px; border-radius: 8px; color: #fff; margin-bottom: 10px;
+            display: flex; align-items: center; gap: 10px; font-family: sans-serif;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.2); animation: slideIn 0.3s forwards;
+        }
+        .success { background: #008080; }
+        .error { background: #e74c3c; }
+        .info { background: #3498db; }
+
+        /* Custom Logout Modal */
+        .logout-modal {
+            position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+            background: rgba(0,0,0,0.6); backdrop-filter: blur(4px); 
+            display: none; align-items: center; justify-content: center; z-index: 9999;
+        }
+        .modal-content {
+            background: white; padding: 30px; border-radius: 15px;
+            width: 350px; text-align: center; box-shadow: 0 15px 30px rgba(0,0,0,0.3);
+        }
+        .modal-btns { display: flex; gap: 15px; margin-top: 20px; }
+        
+        .btn-confirm { 
+            background: #e74c3c; color: white; flex: 1; padding: 12px; border: none; 
+            border-radius: 8px; cursor: pointer; font-weight: 600; transition: 0.3s;
+        }
+        /* Interactive Shake Animation */
+        .btn-confirm:hover { 
+            background: #c0392b; 
+            animation: shake 0.5s ease; 
+        }
+        .btn-cancel { background: #f0f0f0; flex: 1; padding: 12px; border: none; border-radius: 8px; cursor: pointer; }
+
+        @keyframes shake {
+            0%, 100% { transform: translateX(0); }
+            25% { transform: translateX(-5px); }
+            75% { transform: translateX(5px); }
+        }
+        @keyframes slideIn { from { transform: translateX(100%); } to { transform: translateX(0); } }
+        @keyframes fadeOut { to { opacity: 0; transform: translateY(-20px); } }
+    </style>
 </head>
 <body style="display: flex; margin: 0;"> <div class="sidebar">
       <div class="sidebar">
@@ -299,6 +341,7 @@
 </body>
 
 </html>
+
 
 
 
