--- a/AttendanceManagement.html
+++ b/AttendanceManagement.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Attendance Management</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="StyleSheet/Dashboard.css">
     <link rel="stylesheet" href="StyleSheet/AttendanceManagement.css">
     <link rel="stylesheet" href="StyleSheet/SideBar.css">
      <style>
@@ -517,6 +518,7 @@
 </body>
 
 </html>
+
 
 
 
