--- a/AttendanceReport.html
+++ b/AttendanceReport.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Attendance Report</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="StyleSheet/Dashboard.css">
     <link rel="stylesheet" href="StyleSheet/AttendanceReport.css">
     <link rel="stylesheet" href="StyleSheet/SideBar.css">
      <style>
@@ -341,6 +342,7 @@
 </body>
 
 </html>
+
 
 
 
