--- a/Users.html
+++ b/Users.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Users - Attendance System</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="StyleSheet/Dashboard.css">
     <link rel="stylesheet" href="StyleSheet/Users.css">
     <link rel="stylesheet" href="StyleSheet/SideBar.css">
      <style>
@@ -514,6 +515,7 @@ window.clearForm = () => {
     });
 </script>
 </html>
+
 
 
 
