--- a/SideBar.html
+++ b/SideBar.html
@@ -10,9 +10,8 @@
             </div>
         </div>
     </div>
-
     <ul class="nav-links">
-        <li class="nav-item">
+        <li class="nav-item active">
             <a href="Dashboard.html"><i class="fas fa-chart-line"></i> Dashboard</a>
         </li>
         <li class="nav-item">
@@ -28,9 +27,7 @@
 
     <div class="sidebar-footer">
         <li class="nav-item logout">
-            <a href="#" id="logoutBtn">
-                <i class="fas fa-sign-out-alt"></i> Logout
-            </a>
+            <a href="#" id="logoutBtn"><i class="fas fa-sign-out-alt"></i> Logout</a>
         </li>
     </div>
 </div>
