--- a/Dashboard.html
+++ b/Dashboard.html
@@ -67,7 +67,7 @@
     </div>
 </div>
 
-<div id="sidebar-container"></div>
+<div id="sidebar-placeholder"></div>
 
 <div class="main-content">
     <header class="top-header">
@@ -258,6 +258,7 @@
 </script>
 </body>
 </html>
+
 
 
 
