--- a/Dashboard.html
+++ b/Dashboard.html
@@ -196,7 +196,7 @@
 
     document.getElementById('confirmLogout').addEventListener('click', () => {
         closeLogoutModal();
-        notify("Logging out...", "info");
+        notify("Logging out Redirecting...", "info");
         signOut(auth).then(() => {
             window.location.href = 'index.html';
         }).catch(err => notify(err.message, "error"));
@@ -254,6 +254,7 @@
 </script>
 </body>
 </html>
+
 
 
 
