--- a/Users.html
+++ b/Users.html
@@ -275,6 +275,14 @@ async function loadSidebar() {
         console.error("Sidebar Error:", error);
     }
 }
+           // --- LOG OUT TOAST ---
+             document.getElementById('confirmLogout').addEventListener('click', () => {
+        closeLogoutModal();
+        notify("Logging out Redirecting...", "info");
+        signOut(auth).then(() => {
+            window.location.href = 'index.html';
+        }).catch(err => notify(err.message, "error"));
+    });
            
     // --- AUTH & PROFILE LOGIC ---
     function startAuthObserver() {
@@ -461,6 +469,7 @@ async function loadSidebar() {
 </script>
 </body>
 </html>
+
 
 
 
