--- a/Users.html
+++ b/Users.html
@@ -55,7 +55,6 @@
 <body style="display: flex; margin: 0;"> 
     
     <div id="sidebar-placeholder"></div>
-    <div id="toast-container"></div>
     
       <div class="main-content">
         <header class="top-header">
@@ -276,43 +275,14 @@ async function loadSidebar() {
         console.error("Sidebar Error:", error);
     }
 }
-         // HE NOTIFY FUNCTION (The missing piece)
-function notify(message, type = "info") {
-    const container = document.getElementById('toast-container');
-    
-    const toast = document.createElement('div');
-    toast.className = `toast ${type}`;
-    
-    // Set the icon based on type
-    const icon = type === 'success' ? 'fa-check-circle' : 
-                 type === 'error' ? 'fa-exclamation-circle' : 'fa-info-circle';
-                 
-    toast.innerHTML = `<i class="fas ${icon}"></i> <span>${message}</span>`;
-    
-    container.appendChild(toast);
-
-    setTimeout(() => {
-        toast.style.animation = "fadeOut 0.5s forwards";
-        setTimeout(() => toast.remove(), 500);
-    }, 3000);
-}
-
-//THE UPDATED LOGOUT LISTENER
-document.getElementById('confirmLogout').addEventListener('click', () => {
-    // Hide the modal immediately
-    document.getElementById('logoutModal').style.display = 'none';
-
-    // Show the toast
-    notify("Logging out... Redirecting to Login Page", "info");
-
-    setTimeout(() => {
+           // --- LOG OUT TOAST ---
+             document.getElementById('confirmLogout').addEventListener('click', () => {
+        closeLogoutModal();
+        notify("Logging out Redirecting...", "info");
         signOut(auth).then(() => {
             window.location.href = 'index.html';
-        }).catch(err => {
-            notify(err.message, "error");
-        });
-    }, 2000); 
-});
+        }).catch(err => notify(err.message, "error"));
+    });
            
     // --- AUTH & PROFILE LOGIC ---
     function startAuthObserver() {
@@ -482,7 +452,7 @@ document.getElementById('confirmLogout').addEventListener('click', () => {
     window.closeEditModal = () => document.getElementById('editProfileModal').style.display = 'none';
     window.openModal = () => document.getElementById('studentModal').style.display = 'flex';
 
-    // Confirm Logout Logic
+    // Fixed: Confirm Logout Logic
     document.getElementById('confirmLogout').addEventListener('click', () => {
         signOut(auth)
             .then(() => {
@@ -500,4 +470,46 @@ document.getElementById('confirmLogout').addEventListener('click', () => {
 </body>
 </html>
 
-apply that to my code
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+correct this code
