--- a/Dashboard.html
+++ b/Dashboard.html
@@ -51,7 +51,7 @@
         @keyframes fadeOut { to { opacity: 0; transform: translateY(-20px); } }
     </style>
 </head>
-<body>
+<body style="display: flex;">
 
 <div id="toast-container"></div>
 
@@ -67,7 +67,7 @@
     </div>
 </div>
 
-<div style="display: flex;"> <div id="sidebar-placeholder"></div>
+<div id="sidebar-placeholder"></div>
 
 <div class="main-content">
     <header class="top-header">
@@ -296,6 +296,7 @@
 </script>
 </body>
 </html>
+
 
 
 
