--- a/Dashboard.html
+++ b/Dashboard.html
@@ -71,9 +71,11 @@
 
 <div class="main-content">
 <header class="top-header">
-    <div>
+    <div style="width: 45px;"></div> 
+
+    <div class="header-center">
         <h1>DASHBOARD</h1>
-        <div id="liveClock">Friday, February 13, 2026 | 7:43 AM</div>
+        <div id="liveClock">Loading date and time...</div>
     </div>
     
     <div class="menu-container">
@@ -299,6 +301,7 @@
 </script>
 </body>
 </html>
+
 
 
 
