--- a/Dashboard.html
+++ b/Dashboard.html
@@ -73,9 +73,11 @@
 <header class="top-header">
     <div style="width: 45px;"></div> 
 
-    <div class="header-center">
+    <div>
         <h1>DASHBOARD</h1>
+        <div class="header-center">
         <div id="liveClock">Loading date and time...</div>
+        </div>
     </div>
     
     <div class="menu-container">
@@ -301,6 +303,7 @@
 </script>
 </body>
 </html>
+
 
 
 
