--- a/Dashboard.html
+++ b/Dashboard.html
@@ -76,19 +76,19 @@
     </div>
 
     <div class="header-center">
-        <div id="liveClock">Loading time...</div>
+        <div id="liveClock">Friday, February 13, 2026 | 8:27:22 AM</div>
     </div>
     
     <div class="header-right">
-       <div class="menu-container">
-    <button class="menu-button" onclick="toggleMenu()">
-        <i class="fas fa-bars"></i>
-    </button>
-    <div id="myDropdown" class="dropdown-menu">
-        <a href="AttendanceManagement.html">Attendance Management</a>
-        <a href="AttendanceReport.html">Attendance Report</a>
-    </div>
-</div>
+        <div class="menu-container">
+            <button class="menu-button" onclick="toggleMenu()">
+                <i class="fas fa-bars"></i>
+            </button>
+            <div id="myDropdown" class="dropdown-menu">
+                <a href="AttendanceManagement.html">Attendance Management</a>
+                <a href="AttendanceReport.html">Attendance Report</a>
+            </div>
+        </div>
     </div>
 </header>
 
@@ -304,6 +304,7 @@
 </script>
 </body>
 </html>
+
 
 
 
